feat: migrate to Supabase PostgreSQL - no local DB setup needed